fix switch handle being not centered at certain zoom levels

--- a/style/components/misc.scss
+++ b/style/components/misc.scss
@@ -83,7 +83,7 @@
     transition-property: background-color, filter;
     transition-duration: .3s;
     box-sizing: border-box;
-    border: 1px solid transparent;
+    border: none;
     box-sizing: border-box !important; // fix conflict with enhance plugin's arco css styles
 
     .b3-menu__item--current>.b3-menu__label & {
@@ -98,8 +98,8 @@
 
     // 关闭状态指示点
     &::after {
-        top: 1px;
-        left: 1px;
+        top: 2px;
+        left: 2px;
         @include theme-variant-color(background-color, light-components);
         box-shadow: 0 1px 4px -1px #0003;
         border: none;
