--- a/style/features/immersive-tabbar-classic.scss
+++ b/style/features/immersive-tabbar-classic.scss
@@ -162,7 +162,7 @@ body:not(.asri-disable-backdrop-blur) {
         padding-top: 0 !important;
     }
 
-    .backlinkArea.arco-collapse[data-v-db8488aa] .backlinkAreaCollapse>.arco-collapse-item-header {
+    .backlinkArea.arco-collapse .backlinkAreaCollapse>.arco-collapse-item-header {
         z-index: 1;
     }
 }
